Refactor seminar section by removing unused matrix and updating task description

--- a/seminars.tex
+++ b/seminars.tex
@@ -2,23 +2,8 @@
 
 \subsection{Семинар 1}
 
-
-
-\[
-	P =
-	\begin{array}{c|cccccccccc}
-		       & 1        & 2        & 3        & 4        & 5        & 6        & 7        & 8        & 9        & 10        \\ \hline
-		1      & p_{11}   & p_{12}   & p_{13}   & p_{14}   & p_{15}   & p_{16}   & p_{17}   & p_{18}   & p_{19}   & p_{1,10}  \\
-		2      & p_{21}   & p_{22}   & p_{23}   & p_{24}   & p_{25}   & p_{26}   & p_{27}   & p_{28}   & p_{29}   & p_{2,10}  \\
-		3      & p_{31}   & p_{32}   & p_{33}   & p_{34}   & p_{35}   & p_{36}   & p_{37}   & p_{38}   & p_{39}   & p_{3,10}  \\
-		\vdots & \vdots   & \vdots   & \vdots   & \vdots   & \vdots   & \vdots   & \vdots   & \vdots   & \vdots   & \vdots    \\
-		10     & p_{10,1} & p_{10,2} & p_{10,3} & p_{10,4} & p_{10,5} & p_{10,6} & p_{10,7} & p_{10,8} & p_{10,9} & p_{10,10}
-	\end{array}
-\]
-
-
-
-Задача с книгами.
+Задача с книгами с.
+Книгами2
 
 \[
 	P =
