--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,9 @@
 \usepackage{diagbox}
 \usepackage{tabularx}
 \usepackage{hyperref}
-
+\usepackage{tikz} 
+\usetikzlibrary{arrows.meta,positioning}
+\tikzset{lab/.style={font=\footnotesize, inner sep=1pt}}
 
 \usepackage[a4paper,top=2.54cm,bottom=2.54cm,left=3cm,right=1.5cm]{geometry}
 
