--- a/seminars.tex
+++ b/seminars.tex
@@ -3,20 +3,7 @@
 \subsection{Семинар 1}
 
 Задача с книгами с.
-Книгами2
-
-\[
-	P =
-	\begin{array}{c|cccccc}
-		  & 1            & 2            & 3            & 4            & 5            & 6            \\ \hline
-		1 & \tfrac{1}{6} & \tfrac{1}{3} & 0            & \tfrac{1}{2} & 0            & 0            \\
-		2 & \tfrac{1}{6} & \tfrac{1}{3} & 0            & 0            & 0            & \tfrac{1}{2} \\
-		3 & 0            & \tfrac{1}{3} & \tfrac{1}{6} & \tfrac{1}{2} & 0            & 0            \\
-		4 & 0            & 0            & \tfrac{1}{6} & \tfrac{1}{2} & \tfrac{1}{3} & 0            \\
-		5 & \tfrac{1}{6} & 0            & 0            & 0            & \tfrac{1}{3} & \tfrac{1}{2} \\
-		6 & 0            & 0            & \tfrac{1}{6} & 0            & \tfrac{1}{3} & \tfrac{1}{2}
-	\end{array}
-\]
+Книгами
 
 \begin{tikzpicture}[
 		>=Stealth, thick,
@@ -29,46 +16,64 @@
 
 	% --- вероятности ---
 	\newcommand{\p}[1]{p_{#1}}
-	% если нужны цифры: раскомментировать ↓ и закомментировать ↑
 	\renewcommand{\p}[1]{\ifcase#1\relax \or \frac{1}{2}\or \frac{1}{3}\or \frac{1}{6}\fi}
 
 	% --- вершины ---
 	\node[state] (Q1) at (90:3)   {$123$};
-	\node[state] (Q2) at (30:3)   {$231$};
-	\node[state] (Q3) at (-30:3)  {$312$};
-	\node[state] (Q4) at (-90:3)  {$321$};
-	\node[state] (Q5) at (-150:3) {$213$};
-	\node[state] (Q6) at (150:3)  {$132$};
+	\node[state] (Q2) at (30:3)   {$132$};
+	\node[state] (Q3) at (-30:3)  {$213$};
+	\node[state] (Q4) at (-90:3)  {$231$};
+	\node[state] (Q5) at (-150:3) {$312$};
+	\node[state] (Q6) at (150:3)  {$321$};
 
 	% --- рёбра ---
 	% Q1 = 123
-	\path[e1, bend left=12] (Q1) edge node[lbl] {$\p{1}$} (Q2);
-	\path[e2, bend left=12] (Q1) edge node[lbl] {$\p{2}$} (Q6);
+	\path[e1, bend left=12] (Q1) edge node[lbl] {$\p{1}$} (Q4);
+	\path[e2, bend left=12] (Q1) edge node[lbl] {$\p{2}$} (Q2);
 	\path[e3, loop above]   (Q1) edge node[lbl] {$\p{3}$} (Q1);
 
-	% Q2 = 231
-	\path[e1, loop right]   (Q2) edge node[lbl] {$\p{1}$} (Q2);
-	\path[e2, bend left=12] (Q2) edge node[lbl] {$\p{2}$} (Q3);
-	\path[e3, bend left=12] (Q2) edge node[lbl] {$\p{3}$} (Q5);
+	% Q2 = 132
+	\path[e1, bend left=12] (Q2) edge node[lbl] {$\p{1}$} (Q6);
+	\path[e2, loop right]   (Q2) edge node[lbl] {$\p{2}$} (Q2);
+	\path[e3, bend left=12] (Q2) edge node[lbl] {$\p{3}$} (Q1);
 
-	% Q3 = 312
+	% Q3 = 213
 	\path[e1, bend left=12] (Q3) edge node[lbl] {$\p{1}$} (Q4);
-	\path[e2, loop right]   (Q3) edge node[lbl] {$\p{2}$} (Q3);
-	\path[e3, bend left=12] (Q3) edge node[lbl] {$\p{3}$} (Q1);
+	\path[e2, bend left=12] (Q3) edge node[lbl] {$\p{2}$} (Q2);
+	\path[e3, loop right]   (Q3) edge node[lbl] {$\p{3}$} (Q3);
 
-	% Q4 = 321
+	% Q4 = 231
 	\path[e1, loop below]   (Q4) edge node[lbl] {$\p{1}$} (Q4);
-	\path[e2, bend left=12] (Q4) edge node[lbl] {$\p{2}$} (Q3);
-	\path[e3, bend left=12] (Q4) edge node[lbl] {$\p{3}$} (Q5);
+	\path[e2, bend left=12] (Q4) edge node[lbl] {$\p{2}$} (Q5);
+	\path[e3, bend left=12] (Q4) edge node[lbl] {$\p{3}$} (Q3);
 
-	% Q5 = 213
-	\path[e1, bend left=12] (Q5) edge node[lbl] {$\p{1}$} (Q2);
-	\path[e2, bend left=12] (Q5) edge node[lbl] {$\p{2}$} (Q6);
-	\path[e3, loop left]    (Q5) edge node[lbl] {$\p{3}$} (Q5);
+	% Q5 = 312
+	\path[e1, bend left=12] (Q5) edge node[lbl] {$\p{1}$} (Q6);
+	\path[e2, loop left]    (Q5) edge node[lbl] {$\p{2}$} (Q5);
+	\path[e3, bend left=12] (Q5) edge node[lbl] {$\p{3}$} (Q1);
 
-	% Q6 = 132
-	\path[e1, bend left=12] (Q6) edge node[lbl] {$\p{1}$} (Q4);
-	\path[e2, loop left]    (Q6) edge node[lbl] {$\p{2}$} (Q6);
-	\path[e3, bend left=12] (Q6) edge node[lbl] {$\p{3}$} (Q1);
+	% Q6 = 321
+	\path[e1, loop left]    (Q6) edge node[lbl] {$\p{1}$} (Q6);
+	\path[e2, bend left=12] (Q6) edge node[lbl] {$\p{2}$} (Q5);
+	\path[e3, bend left=12] (Q6) edge node[lbl] {$\p{3}$} (Q2);
 
 \end{tikzpicture}
+
+\[
+	P =
+	\begin{array}{c|cccccc}
+		    & Q_1          & Q_2          & Q_3          & Q_4          & Q_5          & Q_6          \\
+		\hline
+		Q_1 & \tfrac{1}{6} & \tfrac{1}{3} & 0            & \tfrac{1}{2} & 0            & 0            \\
+		Q_2 & \tfrac{1}{6} & \tfrac{1}{3} & 0            & 0            & 0            & \tfrac{1}{2} \\
+		Q_3 & 0            & \tfrac{1}{3} & \tfrac{1}{6} & \tfrac{1}{2} & 0            & 0            \\
+		Q_4 & 0            & 0            & \tfrac{1}{6} & \tfrac{1}{2} & \tfrac{1}{3} & 0            \\
+		Q_5 & \tfrac{1}{6} & 0            & 0            & 0            & \tfrac{1}{3} & \tfrac{1}{2} \\
+		Q_6 & 0            & \tfrac{1}{6} & 0            & 0            & \tfrac{1}{3} & \tfrac{1}{2}
+	\end{array}
+\]
+
+
+
+Стационарное распределение:
+
