--- a/seminars.tex
+++ b/seminars.tex
@@ -2,8 +2,7 @@
 
 \subsection{Семинар 1}
 
-Задача с книгами с.
-Книгами
+Задача с книгами с Книгами
 
 \begin{tikzpicture}[
 		>=Stealth, thick,
@@ -74,6 +73,90 @@
 \]
 
 
+Стационарное распределение $\overline r=(r_1,r_2,r_3,r_4,r_5,r_6)$
+задаётся условиями
+\[
+	\overline r P = \overline r,
+	\qquad \sum_{i=1}^6 r_i = 1,
+	\qquad r_i \ge 0.
+\]
 
-Стационарное распределение:
+Из матрицы $P$ получаем систему:
+\[
+	\begin{aligned}
+		r_1 & = \tfrac{1}{6}r_1 + \tfrac{1}{6}r_2 + \tfrac{1}{6}r_5,                   \\
+		r_2 & = \tfrac{1}{3}r_1 + \tfrac{1}{3}r_2 + \tfrac{1}{3}r_3 + \tfrac{1}{6}r_6, \\
+		r_3 & = \tfrac{1}{6}r_3 + \tfrac{1}{6}r_4,                                     \\
+		r_4 & = \tfrac{1}{2}r_1 + \tfrac{1}{2}r_3 + \tfrac{1}{2}r_4,                   \\
+		r_5 & = \tfrac{1}{3}r_4 + \tfrac{1}{3}r_5 + \tfrac{1}{3}r_6,                   \\
+		r_6 & = \tfrac{1}{2}r_2 + \tfrac{1}{2}r_5 + \tfrac{1}{2}r_6.
+	\end{aligned}
+\]
 
+$\Rightarrow$
+
+\[
+	\begin{aligned}
+		6r_1 & = r_1 + r_2 + r_5,          \\
+		6r_2 & = 2r_1 + 2r_2 + 2r_3 + r_6, \\
+		6r_3 & = r_3 + r_4,                \\
+		2r_4 & = r_1 + r_3 + r_4,          \\
+		3r_5 & = r_4 + r_5 + r_6,          \\
+		2r_6 & = r_2 + r_5 + r_6.
+	\end{aligned}
+\]
+
+$\Rightarrow$
+
+\[
+	\begin{aligned}
+		5r_1 - r_2 - r_5          & = 0,                           \\
+		-2r_1 + 4r_2 - 2r_3 - r_6 & = 0,                           \\
+		5r_3 - r_4                & = 0,                           \\
+		-\,r_1 - r_3 + r_4        & = 0,                           \\
+		-\,r_4 + 2r_5 - r_6       & = 0,                           \\
+		-\,r_2 - r_5 + r_6        & = 0,                           \\
+		r_1+r_2+r_3+r_4+r_5+r_6   & = 1 \quad \text{(нормировка).}
+	\end{aligned}
+\]
+
+
+\[
+	\underbrace{
+		\begin{pmatrix}
+			5  & -1 & 0  & 0  & -1 & 0  \\
+			-2 & 4  & -2 & 0  & 0  & -1 \\
+			0  & 0  & 5  & -1 & 0  & 0  \\
+			-1 & 0  & -1 & 1  & 0  & 0  \\
+			0  & 0  & 0  & -1 & 2  & -1 \\
+			1  & 1  & 1  & 1  & 1  & 1
+		\end{pmatrix}}_{\displaystyle A}
+	\;
+	\underbrace{
+		\begin{pmatrix}
+			r_1 \\ r_2\\ r_3\\ r_4\\ r_5\\ r_6
+		\end{pmatrix}}_{\displaystyle x}
+	=
+	\underbrace{
+		\begin{pmatrix}
+			0 \\ 0\\ 0\\ 0\\ 0\\ 1
+		\end{pmatrix}}_{\displaystyle b}.
+\]
+
+\[
+	\left[
+		\begin{array}{rrrrrr|r}
+			5  & -1 & 0  & 0  & -1 & 0  & 0 \\
+			-2 & 4  & -2 & 0  & 0  & -1 & 0 \\
+			0  & 0  & 5  & -1 & 0  & 0  & 0 \\
+			-1 & 0  & -1 & 1  & 0  & 0  & 0 \\
+			0  & 0  & 0  & -1 & 2  & -1 & 0 \\
+			1  & 1  & 1  & 1  & 1  & 1  & 1
+		\end{array}
+		\right]=[\,A\,|\,b\,].
+\]
+
+\[
+	\overline r =
+	\left(\tfrac{4}{43},\;\tfrac{15}{86},\;\tfrac{1}{43},\;\tfrac{5}{43},\;\tfrac{25}{86},\;\tfrac{20}{43}\right).
+\]
