--- a/seminars.tex
+++ b/seminars.tex
@@ -466,3 +466,440 @@
 		q^2(1+pq) & pq(1+pq)  & p^2(1+q)
 	\end{pmatrix}.
 \]
+% ─────────────────────────────────────────────────────────────────────────────
+\subsubsection*{Задача 4}
+
+\begin{tikzpicture}[
+		>=Stealth, thick,
+		state/.style = {draw, circle, minimum size=9mm, font=\small},
+		e/.style   = {->, shorten >=2pt, shorten <=2pt},
+		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
+	]
+	% --- вершины ---
+	\node[state] (Q0) at (0,0)   {$0$};
+	\node[state] (Q1) at (2.5,0) {$1$};
+	\node[state] (Q2) at (5,0)   {$2$};
+	\node[state] (Q3) at (7.5,0) {$3$};
+	\node[state] (Q4) at (10,0)  {$4$};
+
+	% --- рёбра ---
+	\path[e, loop above]   (Q0) edge node[lbl] {$p_0$} (Q0);
+	\path[e, bend left=12] (Q0) edge node[lbl] {$p_1$} (Q1);
+	\path[e, bend left=56] (Q0) edge node[lbl] {$p_2$} (Q2);
+
+	\path[e, bend left=12] (Q1) edge node[lbl] {$p_0$} (Q0);
+	\path[e, loop above]   (Q1) edge node[lbl] {$p_1$} (Q1);
+	\path[e, bend left=12] (Q1) edge node[lbl] {$p_2$} (Q2);
+
+	\path[e, bend left=12] (Q2) edge node[lbl] {$p_0$} (Q1);
+	\path[e, loop above]   (Q2) edge node[lbl] {$p_1$} (Q2);
+	\path[e, bend left=12] (Q2) edge node[lbl] {$p_2$} (Q3);
+
+	\path[e, bend left=12] (Q3) edge node[lbl] {$p_0$} (Q2);
+	\path[e, loop above]   (Q3) edge node[lbl] {$p_1$} (Q3);
+	\path[e, bend left=12] (Q3) edge node[lbl] {$p_2$} (Q4);
+
+	\path[e, bend left=12] (Q4) edge node[lbl] {$p_0$} (Q3);
+	\path[e, loop above]   (Q4) edge node[lbl] {$1-p_0$} (Q4);
+\end{tikzpicture}
+
+Найти: $P$, $\overline{r}$ (стационарное распределение), $que$.
+
+\paragraph{Решение.}
+
+Матрица переходных вероятностей:
+\[
+	P =
+	\begin{array}{c|ccccc}
+		    & Q_0 & Q_1 & Q_2 & Q_3 & Q_4   \\
+		\hline
+		Q_0 & p_0 & p_1 & p_2 & 0   & 0     \\
+		Q_1 & p_0 & p_1 & p_2 & 0   & 0     \\
+		Q_2 & 0   & p_0 & p_1 & p_2 & 0     \\
+		Q_3 & 0   & 0   & p_0 & p_1 & p_2   \\
+		Q_4 & 0   & 0   & 0   & p_0 & 1-p_0
+	\end{array}
+\]
+
+Стационарное распределение $\overline r=(r_0,r_1,r_2,r_3,r_4)$:
+\[
+	\overline r P = \overline r,\qquad \sum_{i=0}^4 r_i = 1,\qquad r_i\ge 0.
+\]
+
+Линейная система из $\overline r P=\overline r$:
+\[
+	\begin{aligned}
+		r_0 & = p_0 r_0 + p_0 r_1,                     \\
+		r_1 & = p_1 r_0 + p_1 r_1 + p_0 r_2,           \\
+		r_2 & = p_2 r_0 + p_2 r_1 + p_1 r_2 + p_0 r_3, \\
+		r_3 & = p_2 r_2 + p_1 r_3 + p_0 r_4,           \\
+		r_4 & = p_2 r_3 + (1-p_0) r_4.
+	\end{aligned}
+\]
+
+Среднее число в системе:
+$g(Q_i)=v_i$ — физическое значение в состоянии $Q_i$. Тогда
+$$que=\sum_{i=0}^{4} v_i r_i$$
+
+\subsubsection*{Задача 4.1}
+
+При $p_0=\tfrac{1}{2},\; p_1=\tfrac{1}{4},\; p_2=\tfrac{1}{4}$:
+\[
+	\begin{aligned}
+		r_0 & = \tfrac{1}{2}r_0 + \tfrac{1}{2}r_1,                                     \\
+		r_1 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1 + \tfrac{1}{2}r_2,                   \\
+		r_2 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1 + \tfrac{1}{4}r_2 + \tfrac{1}{2}r_3, \\
+		r_3 & = \tfrac{1}{4}r_2 + \tfrac{1}{4}r_3 + \tfrac{1}{2}r_4,                   \\
+		r_4 & = \tfrac{1}{4}r_3 + \tfrac{1}{2}r_4,\qquad
+		r_0+r_1+r_2+r_3+r_4=1.
+	\end{aligned}
+\]
+
+\[
+	\begin{array}{rcl}
+		\begin{aligned}
+			2r_0 & = r_0 + r_1,              \\
+			4r_1 & = r_0 + r_1 + 2r_2,       \\
+			4r_2 & = r_0 + r_1 + r_2 + 2r_3, \\
+			4r_3 & = r_2 + r_3 + 2r_4,       \\
+			2r_4 & = r_3 + 2r_4,
+		\end{aligned}
+		 & \qquad \Rightarrow \qquad &
+		\begin{aligned}
+			r_0 - r_1                  & = 0, \\
+			-\,r_0 + 3r_1 - 2r_2       & = 0, \\
+			-\,r_0 - r_1 + 3r_2 - 2r_3 & = 0, \\
+			-\,r_2 + 3r_3 - 2r_4       & = 0, \\
+			r_0+r_1+r_2+r_3+r_4        & =1.
+		\end{aligned}
+	\end{array}
+\]
+
+\[
+	\left[
+		\begin{array}{rrrrr|r}
+			1  & -1 & 0  & 0  & 0  & 0 \\
+			-1 & 3  & -2 & 0  & 0  & 0 \\
+			-1 & -1 & 3  & -2 & 0  & 0 \\
+			0  & 0  & -1 & 3  & -2 & 0 \\
+			1  & 1  & 1  & 1  & 1  & 1
+		\end{array}
+		\right]
+	\overset{}{\longrightarrow}
+	\left[
+		\begin{array}{rrrrr|r}
+			1 & 0 & 0 & 0 & 0 & \tfrac{4}{15} \\
+			0 & 1 & 0 & 0 & 0 & \tfrac{4}{15} \\
+			0 & 0 & 1 & 0 & 0 & \tfrac{4}{15} \\
+			0 & 0 & 0 & 1 & 0 & \tfrac{2}{15} \\
+			0 & 0 & 0 & 0 & 1 & \tfrac{1}{15}
+		\end{array}
+		\right]
+\]
+
+\[
+	\overline r =
+	\left(\tfrac{4}{15},\;\tfrac{4}{15},\;\tfrac{4}{15},\;\tfrac{2}{15},\;\tfrac{1}{15}\right).
+\]
+
+\[
+	que = \sum_{i=0}^{4} v_i r_i= 0\cdot\tfrac{4}{15} + 1\cdot\tfrac{4}{15} + 2\cdot\tfrac{4}{15} + 3\cdot\tfrac{2}{15} + 4\cdot\tfrac{1}{15} = \frac{22}{15} \approx 1.4667.
+\]
+
+\[
+	\boxed{\ que=\frac{22}{15}\approx1.4667\ }.
+\]
+
+\subsubsection*{Задача 4.2}
+
+При вероятностях $p_0=\tfrac{1}{4},\; p_1=\tfrac{1}{2},\; p_2=\tfrac{1}{4}$
+
+\[
+	\begin{aligned}
+		r_0 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1,                                     \\
+		r_1 & = \tfrac{1}{2}r_0 + \tfrac{1}{2}r_1 + \tfrac{1}{4}r_2,                   \\
+		r_2 & = \tfrac{1}{4}r_0 + \tfrac{1}{2}r_1 + \tfrac{1}{4}r_2 + \tfrac{1}{4}r_3, \\
+		r_3 & = \tfrac{1}{4}r_2 + \tfrac{1}{2}r_3 + \tfrac{1}{4}r_4,                   \\
+		r_4 & = \tfrac{1}{4}r_3 + \tfrac{3}{4}r_4,\qquad
+		r_0+r_1+r_2+r_3+r_4=1.
+	\end{aligned}
+\]
+
+\[
+	\begin{array}{rcl}
+		\begin{aligned}
+			4r_0 & = r_0 + r_1,              \\
+			4r_1 & = 2r_0 + 2r_1 + r_2,      \\
+			4r_2 & = r_0 + 2r_1 + r_2 + r_3, \\
+			4r_3 & = r_2 + 2r_3 + r_4,       \\
+			4r_4 & = r_3 + 3r_4,
+		\end{aligned}
+		 & \qquad \Rightarrow \qquad &
+		\begin{aligned}
+			3r_0 - r_1                 & = 0, \\
+			-\,2r_0 + 2r_1 - r_2       & = 0, \\
+			-\,r_0 - 2r_1 + 3r_2 - r_3 & = 0, \\
+			-\,r_2 + 2r_3 - r_4        & = 0, \\
+			r_0+r_1+r_2+r_3+r_4        & = 1.
+		\end{aligned}
+	\end{array}
+\]
+
+\[
+	\left[
+		\begin{array}{rrrrr|r}
+			3  & -1 & 0  & 0  & 0  & 0 \\
+			-2 & 2  & -1 & 0  & 0  & 0 \\
+			-1 & -2 & 3  & -1 & 0  & 0 \\
+			0  & 0  & -1 & 2  & -1 & 0 \\
+			1  & 1  & 1  & 1  & 1  & 1
+		\end{array}
+		\right]
+	\longrightarrow
+	\left[
+		\begin{array}{rrrrr|r}
+			1 & 0 & 0 & 0 & 0 & \tfrac{1}{16} \\
+			0 & 1 & 0 & 0 & 0 & \tfrac{3}{16} \\
+			0 & 0 & 1 & 0 & 0 & \tfrac{1}{4}  \\
+			0 & 0 & 0 & 1 & 0 & \tfrac{1}{4}  \\
+			0 & 0 & 0 & 0 & 1 & \tfrac{1}{4}
+		\end{array}
+		\right]
+\]
+
+\[
+	\overline r=\left(\tfrac{1}{16},\,\tfrac{3}{16},\,\tfrac{1}{4},\,\tfrac{1}{4},\,\tfrac{1}{4}\right).
+\]
+
+\[
+	que=\sum_{i=0}^{4} v_i r_i
+	= 0\cdot\tfrac{1}{16}+1\cdot\tfrac{3}{16}+2\cdot\tfrac{1}{4}+3\cdot\tfrac{1}{4}+4\cdot\tfrac{1}{4}
+	= \frac{39}{16}=2.4375.
+\]
+
+\[
+	\boxed{\,que=\frac{39}{16}\approx 2.4375\, }.
+\]
+
+\subsubsection*{Задача 4.3}
+
+При вероятностях $p_0=\tfrac{1}{4},\; p_1=\tfrac{1}{4},\; p_2=\tfrac{1}{2}$
+
+\[
+	\begin{aligned}
+		r_0 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1,                                     \\
+		r_1 & = \tfrac{1}{4}r_0 + \tfrac{1}{4}r_1 + \tfrac{1}{4}r_2,                   \\
+		r_2 & = \tfrac{1}{2}r_0 + \tfrac{1}{2}r_1 + \tfrac{1}{4}r_2 + \tfrac{1}{4}r_3, \\
+		r_3 & = \tfrac{1}{2}r_2 + \tfrac{1}{4}r_3 + \tfrac{1}{4}r_4,                   \\
+		r_4 & = \tfrac{1}{2}r_3 + \tfrac{3}{4}r_4,\qquad
+		r_0+r_1+r_2+r_3+r_4=1.
+	\end{aligned}
+\]
+
+\[
+	\begin{array}{rcl}
+		\begin{aligned}
+			4r_0 & = r_0 + r_1,               \\
+			4r_1 & = r_0 + r_1 + r_2,         \\
+			4r_2 & = 2r_0 + 2r_1 + r_2 + r_3, \\
+			4r_3 & = 2r_2 + r_3 + r_4,        \\
+			4r_4 & = 2r_3 + 3r_4,
+		\end{aligned}
+		 & \Rightarrow &
+		\begin{aligned}
+			3r_0 - r_1                  & = 0, \\
+			-\,r_0 + 3r_1 - r_2         & = 0, \\
+			-\,2r_0 - 2r_1 + 3r_2 - r_3 & = 0, \\
+			-\,2r_2 + 3r_3 - r_4        & = 0, \\
+			-\,2r_3 + r_4               & = 0, \\
+			r_0+r_1+r_2+r_3+r_4         & = 1.
+		\end{aligned}
+	\end{array}
+\]
+
+\[
+	\left[
+		\begin{array}{rrrrr|r}
+			3  & -1 & 0  & 0  & 0  & 0 \\
+			-1 & 3  & -1 & 0  & 0  & 0 \\
+			-2 & -2 & 3  & -1 & 0  & 0 \\
+			0  & 0  & -2 & 3  & -1 & 0 \\
+			0  & 0  & 0  & -2 & 1  & 0 \\
+			1  & 1  & 1  & 1  & 1  & 1
+		\end{array}
+		\right]
+	\longrightarrow
+	\left[
+		\begin{array}{rrrrr|r}
+			1 & 0 & 0 & 0 & 0 & \tfrac{1}{60} \\
+			0 & 1 & 0 & 0 & 0 & \tfrac{1}{20} \\
+			0 & 0 & 1 & 0 & 0 & \tfrac{2}{15} \\
+			0 & 0 & 0 & 1 & 0 & \tfrac{4}{15} \\
+			0 & 0 & 0 & 0 & 1 & \tfrac{8}{15}
+		\end{array}
+		\right]
+\]
+
+\[
+	\overline r=\left(\tfrac{1}{60},\,\tfrac{1}{20},\,\tfrac{2}{15},\,\tfrac{4}{15},\,\tfrac{8}{15}\right).
+\]
+
+\[
+	que=\sum_{i=0}^{4} v_i r_i
+	= 0\cdot\tfrac{1}{60}+1\cdot\tfrac{1}{20}+2\cdot\tfrac{2}{15}
+	+3\cdot\tfrac{4}{15}+4\cdot\tfrac{8}{15}
+	= \frac{13}{4}=3.25.
+\]
+\[
+	\boxed{\,que=\frac{13}{4}=3.25\, }.
+\]
+
+
+\subsection{Семинар 5}
+
+\subsubsection*{Задача 5}
+
+\begin{tikzpicture}[
+		>=Stealth, thick,
+		state/.style = {draw, circle, minimum size=9mm, font=\small},
+		e/.style   = {->, shorten >=2pt, shorten <=2pt},
+		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
+	]
+
+	% --- вершины ---
+	\node[state] (Q1) at (0,0) {$1$};
+	\node[state] (Q2) at (2.5,0) {$2$};
+	\node[state] (Q3) at (5,0) {$3$};
+	\node[state] (Q4) at (7.5,0) {$4$};
+	\node[state] (Q5) at (10,0) {$5$};
+	\node[state] (Q6) at (12.5,0) {$...$};
+
+	% --- рёбра ---
+	\path[e, loop above]   (Q1) edge node[lbl] {$p_1$} (Q1);
+	\path[e, bend left=12] (Q1) edge node[lbl] {$p_2$} (Q2);
+	\path[e, bend left=56] (Q1) edge node[lbl] {$p_3$} (Q3);
+
+	\path[e, bend left=12] (Q2) edge node[lbl] {$p_1$} (Q1);
+	\path[e, loop above]   (Q2) edge node[lbl] {$p_2$} (Q2);
+	\path[e, bend left=12] (Q2) edge node[lbl] {$p_3$} (Q3);
+
+	\path[e, bend left=12] (Q3) edge node[lbl] {$p_1$} (Q2);
+	\path[e, loop above]   (Q3) edge node[lbl] {$p_2$} (Q3);
+	\path[e, bend left=12] (Q3) edge node[lbl] {$p_3$} (Q4);
+
+	\path[e, bend left=12] (Q4) edge node[lbl] {$p_1$} (Q3);
+	\path[e, loop above]   (Q4) edge node[lbl] {$p_2$} (Q4);
+	\path[e, bend left=12] (Q4) edge node[lbl] {$p_3$} (Q5);
+
+	\path[e, bend left=12] (Q5) edge node[lbl] {$p_1$} (Q4);
+	\path[e, loop above]   (Q5) edge node[lbl] {$p_2$} (Q5);
+	\path[e, bend left=12] (Q5) edge node[lbl] {$p_3$} (Q6);
+
+\end{tikzpicture}
+
+Найти: $P$, $\overline{r}$ (стационарное распределение).
+\paragraph{Решение.}
+
+\[
+	P =
+	\begin{array}{c|cccccc}
+		       & Q_1    & Q_2    & Q_3    & Q_4    & Q_5    & \ldots \\
+		\hline
+		Q_1    & p_1    & p_2    & p_3    & 0      & 0      & \ldots \\
+		Q_2    & p_1    & p_2    & p_3    & 0      & 0      & \ldots \\
+		Q_3    & 0      & p_1    & p_2    & p_3    & 0      & \ldots \\
+		Q_4    & 0      & 0      & p_1    & p_2    & p_3    & \ldots \\
+		Q_5    & 0      & 0      & 0      & p_1    & p_2    & \ldots \\
+		\vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \ddots
+	\end{array}
+\]
+
+Стационарное распределение $\overline r=(r_1,r_2,r_3,r_4,\ldots)$ задаётся условиями
+\[
+	\overline r P = \overline r,\quad \sum_{i=1}^\infty r_i = 1,\quad r_i\ge0.
+\]
+Из матрицы $P$ получаем систему:
+
+\[
+	\begin{array}{rcl}
+		\begin{aligned}
+			r_1 & = p_1 r_1 + p_1 r_2,                           \\
+			r_2 & = p_2 r_1 + p_2 r_2 + p_1 r_3,                 \\
+			r_3 & = p_3 r_1 + p_3 r_2 + p_2 r_3 + p_1 r_4,       \\
+			r_k & = p_3 r_{k-2} + p_2 r_k + p_1 r_{k+1}, k\geq 4
+		\end{aligned}
+	\end{array}
+\]
+
+
+\subsubsection*{Задача 5.1}
+
+При вероятностях $p_1=\tfrac{1}{2},\quad p_2=\tfrac{1}{4},\quad p_3=\tfrac{1}{4}$
+
+\[
+	\begin{array}{rcl}
+		\begin{aligned}
+			r_1 & = \tfrac{1}{2} r_1 + \tfrac{1}{2} r_2,                                           \\
+			r_2 & = \tfrac{1}{4} r_1 + \tfrac{1}{4} r_2 + \tfrac{1}{2} r_3,                        \\
+			r_3 & = \tfrac{1}{4} r_1 + \tfrac{1}{4} r_2 + \tfrac{1}{4} r_3 + \tfrac{1}{2} r_4,     \\
+			r_k & = \tfrac{1}{4} r_{k-2} + \tfrac{1}{4} r_k + \tfrac{1}{2} r_{k+1}, \quad k \ge 3.
+		\end{aligned}
+		 & \qquad \Rightarrow \qquad &
+		\begin{aligned}
+			r_1 & = r_1,                   \\
+			r_2 & = r_1,                   \\
+			r_3 & = \frac{1}{2} r_1,       \\
+			r_k & = \frac{1}{2^{k-2}} r_1.
+		\end{aligned}
+	\end{array}
+\]
+
+\[
+	\begin{aligned}
+		que = \sum_{i=1}^\infty r_i
+		= r_1 + r_1 + \tfrac{1}{2}r_1 + \tfrac{1}{4}r_1 + \tfrac{1}{8}r_1 + \ldots
+		= r_1 \left(1 + 1 + \tfrac{1}{2} + \sum_{k=3}^\infty \tfrac{1}{2^{k-2}}\right)
+		= 4r_1 = 1 \;\Rightarrow\; r_1 = \tfrac{1}{4}.
+	\end{aligned}
+\]
+
+
+Следовательно,
+\[
+	\overline r = \left(\frac{1}{4},\ \frac{1}{4},\ \frac{1}{8},\ \frac{1}{16},\ \frac{1}{32},\ \ldots\right).
+\]
+
+
+\subsubsection*{Задача 5.2}
+
+При вероятностях $p_1=\tfrac{1}{4},\quad p_2=\tfrac{1}{2},\quad p_3=\tfrac{1}{4}$
+
+\[
+	\begin{array}{rcl}
+		\begin{aligned}
+			r_1 & = \tfrac{1}{4} r_1 + \tfrac{1}{4} r_2,                                           \\
+			r_2 & = \tfrac{1}{2} r_1 + \tfrac{1}{2} r_2 + \tfrac{1}{4} r_3,                        \\
+			r_3 & = \tfrac{1}{4} r_1 + \tfrac{1}{2} r_2 + \tfrac{1}{4} r_3 + \tfrac{1}{4} r_4,     \\
+			r_k & = \tfrac{1}{4} r_{k-2} + \tfrac{1}{2} r_k + \tfrac{1}{4} r_{k+1}, \quad k \ge 3.
+		\end{aligned}
+		 & \qquad \Rightarrow \qquad &
+		\begin{aligned}
+			r_1 & = r_2,                    \\
+			r_2 & = 2r_1,                   \\
+			r_3 & = r_1,                    \\
+			r_k & = r_{k-2}, \quad k \ge 3.
+		\end{aligned}
+	\end{array}
+\]
+
+\[
+	\begin{aligned}
+	\end{aligned}
+\]
+
+Нет нормированного решения, следовательно, стационарного распределения нет.
+
+
+\subsection{Семинар 6}
+
+\subsubsection*{Задача 6.1}
