--- a/seminars.tex
+++ b/seminars.tex
@@ -894,15 +894,6 @@ $$que=\sum_{i=0}^{4} v_i r_i$$
 
 \subsubsection*{Задача 6.1}
 
-\[
-	p'(0)=\Lambda =
-	\begin{pmatrix}
-		0 & 0  & 0 \\
-		1 & -2 & 1 \\
-		0 & 0  & 0
-	\end{pmatrix}
-\]
-
 \begin{tikzpicture}[
 		>=Stealth, thick,
 		state/.style = {draw, circle, minimum size=9mm, font=\small},
@@ -920,6 +911,15 @@ $$que=\sum_{i=0}^{4} v_i r_i$$
 	\path[e, bend left=12]   (Q1) edge node[lbl] {$1$} (Q2);
 
 \end{tikzpicture}
+
+\[
+	\Lambda =
+	\begin{pmatrix}
+		0 & 0  & 0 \\
+		1 & -2 & 1 \\
+		0 & 0  & 0
+	\end{pmatrix}
+\]
 
 \[
 	\vec{p}(0) = (0,1,0).
@@ -967,15 +967,6 @@ $$que=\sum_{i=0}^{4} v_i r_i$$
 \subsubsection*{Задача 6.2}
 
 
-\[
-	p'(0)=\Lambda =
-	\begin{pmatrix}
-		0 & 0  & 0 \\
-		1 & -2 & 1 \\
-		0 & 0  & 0
-	\end{pmatrix}
-\]
-
 \begin{tikzpicture}[
 		>=Stealth, thick,
 		state/.style = {draw, circle, minimum size=9mm, font=\small},
@@ -993,6 +984,16 @@ $$que=\sum_{i=0}^{4} v_i r_i$$
 	\path[e, bend left=12]   (Q1) edge node[lbl] {$1$} (Q2);
 
 \end{tikzpicture}
+
+\[
+	\Lambda =
+	\begin{pmatrix}
+		0 & 0  & 0 \\
+		1 & -2 & 1 \\
+		0 & 0  & 0
+	\end{pmatrix}
+\]
+
 
 \[
 	\vec{p}(0) = (\beta_1,\beta_2,\beta_3).
@@ -1039,3 +1040,58 @@ $$que=\sum_{i=0}^{4} v_i r_i$$
 
 \subsubsection*{Задача 6.3}
 
+
+\begin{tikzpicture}[
+		>=Stealth, thick,
+		state/.style = {draw, circle, minimum size=9mm, font=\small},
+		e/.style   = {->, shorten >=2pt, shorten <=2pt},
+		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
+	]
+
+	% --- вершины ---
+	\node[state] (Q0) at (0,0) {$1$};
+	\node[state] (Q1) at (2.5,0) {$2$};
+	\node[state] (Q2) at (5,0) {$3$};
+
+	% --- рёбра ---
+	\path[e, bend left=12] (Q1) edge node[lbl] {$1$} (Q0);
+	\path[e, bend left=12]   (Q1) edge node[lbl] {$1$} (Q2);
+
+	\path[e, bend left=12]   (Q2) edge node[lbl] {$1$} (Q1);
+
+\end{tikzpicture}
+
+
+\[
+	\Lambda =
+	\begin{pmatrix}
+		0 & 0  & 0  \\
+		1 & -2 & 1  \\
+		0 & 1  & -1
+	\end{pmatrix}
+\]
+
+\[
+	\vec{p}(0) = (0,0,1).
+\]
+
+\[
+	\vec{p}'(t) = \vec{p}(t)\Lambda,\quad \vec{p}(t)=(p_1(t),p_2(t),p_3(t)).
+\]
+
+\[
+	\begin{aligned}
+		p_1'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot 1 + p_3(t)\cdot 0 = p_2(t),            \\
+		p_2'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot(-2) + p_3(t)\cdot 1 = -2p_2(t)+p_3(t), \\
+		p_3'(t) & = p_1 (t)\cdot 0 + p_2(t)\cdot 1 + p_3(t)\cdot(-1) = p_2(t)-p_3(t).
+	\end{aligned}
+\]
+
+\[
+	\begin{pmatrix}p_2\\p_3\end{pmatrix}'=
+	A\begin{pmatrix}p_2\\p_3\end{pmatrix},\qquad
+	A=\begin{pmatrix}-2&1\\[2pt]1&-1\end{pmatrix}.
+\]
+
+
+//TODO
