--- a/seminars.tex
+++ b/seminars.tex
@@ -1094,4 +1094,30 @@ $$que=\sum_{i=0}^{4} v_i r_i$$
 \]
 
 
-//TODO
+\[
+	\begin{pmatrix}p_2\\p_3\end{pmatrix}
+	= C_1\,v_1\,e^{\lambda_1 t}+C_2\,v_2\,e^{\lambda_2 t},\qquad
+	\begin{aligned}
+		p_2(0) & =0, \\
+		p_3(0) & =1
+	\end{aligned}
+\]
+
+\[
+	C_1=\frac{1}{2}-\frac{\sqrt{5}}{10},\qquad
+	C_2=\frac{1}{2}+\frac{\sqrt{5}}{10}.
+\]
+
+\[
+	\boxed{\,p_2(t)=\frac{\sqrt{5}}{5}\!\left(e^{\frac{-3+\sqrt{5}}{2}t}-e^{\frac{-3-\sqrt{5}}{2}t}\right)\,},\qquad
+	\boxed{\,p_3(t)=\left(\tfrac{1}{2}-\tfrac{\sqrt{5}}{10}\right)e^{\frac{-3-\sqrt{5}}{2}t}+\left(\tfrac{1}{2}+\tfrac{\sqrt{5}}{10}\right)e^{\frac{-3+\sqrt{5}}{2}t}\,}.
+\]
+
+\[
+	\boxed{\,p_1(t)=1-p_2(t)-p_3(t)
+		=1-\frac{5-3\sqrt{5}}{10}\,e^{\frac{-3-\sqrt{5}}{2}t}-\frac{5+3\sqrt{5}}{10}\,e^{\frac{-3+\sqrt{5}}{2}t}\,}.
+\]
+
+\[
+	\vec{p}(t)\xrightarrow[t\to\infty]{}\vec{p}(\infty)=(1,0,0).
+\]
